<resources>

    <string name="recherche_une_salle_string">Recherche une salle </string>

    <string name="text1">Nombre de siges :53 \nDiponibilit:true \nNombre de matriel :2 \nNom de matriel :datashow \nType de matriel:informatique.</string>

    <string name="text2">Nombre de siges :15 \nDiponibilit:true \nNombre de matriel :0\nNom de matriel :0\nType de matriel:null.</string>
    <string name="text3">Nombre de siges :15 .Diponibilit:false \nNombre de matriel :0\nNom de matriel :0\nType de matriel:null.</string>

    <string name="text4">Nombre de siges :30 .Diponibilit:false \nNombre de matriel :2\nNom de matriel :datashow\nType de matriel:informatique.</string>

    <string name="text5">Nombre de siges :0 .Diponibilit:true \nNombre de matriel :0\nNom de matriel :0\nType de matriel:null.</string>
    <string name="text1_center">Centre d\'études et de formation. Tiznit -CEFT . \nNombre des salles : 10</string>
    <string name="text2_center">Un centre culturel institution  qui propose notamment une programmation \nNombre des salles : 10</string>
    <string name="text3_center">Appui du sport de proximité au centre urbain; Amélioration des conditions d\'entrainement . \nNombre des salles : 10</string>
    <string name="text4_center">Mettre en réseau les acteurs opérant dans le domaine artistique coopération locale.\n Nombre des salles : 10</string>

    <string name="app_name">CentreReservationApkMobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">Reservation des centres </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>>>> Temporary merge branch 2
</resources>