<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#838383"
    android:orientation="vertical"
    tools:context=".ConnectionActivity">
    <RelativeLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/icon_parame"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Bienvenue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logout_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/logout"
            android:layout_alignParentEnd="true"/>


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_below="@id/welcome_layout">
        <EditText
            android:id="@+id/search_box"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="39dp"
            android:padding="2dp"
            android:hint="-chercher une salle"

            android:background="@drawable/editround"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="60dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/search1" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/welcome_layout"
        android:layout_marginTop="60dp"
        android:background="@drawable/rectangle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/item_1"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rectangle_list"
                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/t_l_chargement_3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Salle d’acceuil"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text1" />
                </LinearLayout>
            </LinearLayout>


            <!-- Repeat for the other four items -->

            <LinearLayout
                android:id="@+id/item_2"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rectangle_list"
                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/t_l_chargement_2_ek1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Salle de révision"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text2" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_3"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rectangle_list"

                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/t_l_chargement_2_ek2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Salle  de reunion"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text3" />
                </LinearLayout>
            </LinearLayout>
            <!-- Repeat for the other four items -->

            <LinearLayout
                android:id="@+id/item_4"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rectangle_list"

                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/t_l_chargement_2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Salle d’etude"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text4" />
                </LinearLayout>
            </LinearLayout>
            <!-- Repeat for the other four items -->

            <LinearLayout
                android:id="@+id/item_5"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rectangle_list"

                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/t_l_chargement_2_ek3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Salle d’activité"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text5" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
