<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#838383"
    android:orientation="vertical"
    tools:context=".ConnectionActivity">
    <RelativeLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/icon_parame"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Bienvenue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logout_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/logout"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/welcome_layout"
        android:background="@drawable/rectangle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">


            <!-- Repeat for the other four items -->

            <LinearLayout
                android:id="@+id/center1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rectangle_list"


                android:padding="16dp">

                <ImageView
                    android:id="@+id/img_center1"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ceftiznit" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="2dp"

                        android:text="CEFT Tiznit"
                        android:textColor="#FF640D"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text1_center" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/center2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rectangle_list"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/img_center2"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/centre_de_culture" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="20dp"
                        android:textColor="#FF640D"
                        android:textSize="20dp"
                        android:text="Centre de culture"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text2_center" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/center3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/rectangle_list"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                android:padding="16dp">

                <ImageView
                    android:id="@+id/img_center3"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/centre_de_jeunisse" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Centre de Jeunesse et sport"
                        android:layout_marginLeft="10dp"
                        android:textSize="20dp"
                        android:textColor="#FF640D"

                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text3_center" />
                </LinearLayout>
            </LinearLayout>
            <!-- Repeat for the other four items -->

            <LinearLayout
                android:id="@+id/center4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/rectangle_list"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                android:padding="16dp">

                <ImageView
                    android:id="@+id/img_center4"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/complexe_culturel" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Complexe culturel éducatif"
                        android:layout_marginLeft="10dp"
                        android:textSize="20dp"
                        android:textColor="#FF640D"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text4_center" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>





</RelativeLayout>
